@startuml

title __REGISTRATION's Class Diagram__\n

  namespace  {
    namespace du.tanta.fci.reoil {
      namespace user {
        namespace registration {
          class edu.tanta.fci.reoil.user.registration.RegistrationController {
              - logger : Logger
              + register()
              + verify()
              ~ RegistrationController()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace du.tanta.fci.reoil {
      namespace user {
        namespace registration {
          class edu.tanta.fci.reoil.user.registration.RegistrationService {
              - disableEmailVerification : boolean
              - encoder : PasswordEncoder
              - eventPublisher : ApplicationEventPublisher
              + RegistrationService()
              + processUserRegistration()
              + verifyUser()
              - toUser()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace du.tanta.fci.reoil {
      namespace user {
        namespace registration {
          interface edu.tanta.fci.reoil.user.registration.VerificationCodeRepository {
              {abstract} + existsByUsername()
              {abstract} + findByUsername()
              {abstract} + findIdByUsername()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace du.tanta.fci.reoil {
      namespace user {
        namespace registration {
          class edu.tanta.fci.reoil.user.registration.VerificationService {
              + VerificationService()
              + createVerification()
              + deleteVerification()
              + getUsernameForId()
              + getVerificationIdByUsername()
          }
        }
      }
    }
  }
  

  edu.tanta.fci.reoil.user.registration.RegistrationController o-- edu.tanta.fci.reoil.user.registration.RegistrationService : registrationService
  edu.tanta.fci.reoil.user.registration.RegistrationService o-- edu.tanta.fci.reoil.user.UserService : userService
  edu.tanta.fci.reoil.user.registration.RegistrationService o-- edu.tanta.fci.reoil.user.registration.VerificationService : verificationService
  edu.tanta.fci.reoil.user.registration.VerificationService o-- edu.tanta.fci.reoil.user.registration.VerificationCodeRepository : repository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
